- fix collapsing svg

--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -6,6 +6,11 @@
   width: 100%;
   height: 100vh;
   margin: 0 auto;
+
+  svg {
+    width: 100%;
+    height: 100vh;
+  }
 }
 
 // @media (orientation: portrait) {
